--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # 数据库配置
-DATABASE_URL=mysql://root@localhost:3306/quantconsole
+DATABASE_URL=mysql://root@localhost:3306/quantconsole?charset=utf8mb4
 
 # JWT 密钥
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
