--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,28 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "react-hook-form": "^7.48.2",
-    "react-query": "^3.39.3",
     "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
+    "@types/chart.js": "^2.9.41",
     "axios": "^1.6.2",
-    "zustand": "^4.4.7",
+    "chart.js": "^4.5.0",
+    "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
-    "crypto-js": "^4.2.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
+    "tailwind-merge": "^2.0.0",
+    "websocket": "^1.0.35",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/crypto-js": "^4.2.1",
     "@types/js-cookie": "^3.0.6",
     "@types/qrcode": "^1.5.5",
-    "@types/crypto-js": "^4.2.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
