vscode的task兼容性问题，更新到copilot-instructions文件

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,18 +1,130 @@
 {
     "version": "2.0.0",
-    "//": "=== 此文件已被永久禁用 ===",
-    "//comment1": "根据用户明确要求，此 tasks.json 文件已被完全禁用",
-    "//comment2": "GitHub Copilot 严禁使用此文件中的任何任务配置",
-    "//comment3": "所有开发任务必须使用 run_in_terminal 工具手动执行",
-    "//comment4": "请参考 .github/copilot-instructions.md 中的相关说明",
     "tasks": [
         {
-            "label": "❌ 文件已禁用 - 严禁使用",
+            "label": "Frontend: Dev Server",
             "type": "shell",
-            "command": "echo",
-            "args": [
-                "此 tasks.json 文件已被用户永久禁用。GitHub Copilot 严禁使用此文件。请使用 run_in_terminal 工具手动执行所有开发任务。"
-            ],
+            "command": "npm",
+            "args": ["run", "dev"],
+            "options": {
+                "cwd": "${workspaceFolder}/frontend"
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "isBackground": true,
+            "problemMatcher": {
+                "owner": "vite",
+                "pattern": [
+                    {
+                        "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                        "file": 1,
+                        "line": 2,
+                        "column": 3,
+                        "severity": 4,
+                        "message": 5
+                    }
+                ],
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^\\s*vite",
+                    "endsPattern": "ready in"
+                }
+            }
+        },
+        {
+            "label": "Backend: Dev Server",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["run"],
+            "options": {
+                "cwd": "${workspaceFolder}/backend"
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "isBackground": true,
+            "problemMatcher": "$rustc"
+        },
+        {
+            "label": "Frontend: Build",
+            "type": "shell",
+            "command": "npm",
+            "args": ["run", "build"],
+            "options": {
+                "cwd": "${workspaceFolder}/frontend"
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": {
+                "owner": "vite",
+                "pattern": [
+                    {
+                        "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
+                        "file": 1,
+                        "line": 2,
+                        "column": 3,
+                        "severity": 4,
+                        "message": 5
+                    }
+                ]
+            }
+        },
+        {
+            "label": "Backend: Build",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["build", "--release"],
+            "options": {
+                "cwd": "${workspaceFolder}/backend"
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": "$rustc"
+        },
+        {
+            "label": "Database: Run Migration",
+            "type": "shell",
+            "command": "cargo",
+            "args": ["run"],
+            "options": {
+                "cwd": "${workspaceFolder}/backend/migration"
+            },
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "problemMatcher": "$rustc"
+        },
+        {
+            "label": "🐳 Docker: Start All Services",
+            "type": "shell",
+            "command": "docker-compose",
+            "args": ["up", "-d"],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
             "group": "build",
             "presentation": {
                 "echo": true,
