--- a/backend/migration/Cargo.toml
+++ b/backend/migration/Cargo.toml
@@ -8,6 +8,10 @@ publish = false
 name = "migration"
 path = "src/lib.rs"
 
+[[bin]]
+name = "migration"
+path = "src/main.rs"
+
 [dependencies]
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 sea-orm-migration = { version = "0.12", features = [
